--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <body>
 <div class="container mt-3 d-flex flex-column align-items-center ">
  <div class="col-12 p-0  d-flex justify-content-center align-items-center  bg">
-    <h4>Budjet Calcutaor <i class="fas fa-wallet p-3"></i></h4>
+    <h4>Budget Calcutaor <i class="fas fa-wallet p-3"></i></h4>
 </div>
 <div class="col-12 d-flex flex-xl-row flex-column justify-content-between my-2 align-items-center">
 <div class="col-12 col-xl-5 my-2 bg">
-    <h4>Budjet</h4>
+    <h4>Budget</h4>
     <input type="number" class="col-8" placeholder="Your Budget" name="" id="budget">
     <button class="col-3" id="done">Done</button>
 </div>
@@ -74,3 +74,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
+
